tdf#49554 Fix misleading error message

Fix misleading error message about primary key
on first page of table import wizard, and give
additional info about the process by adding
an info label.

Change-Id: I7c511abc512b7ab87321c055057bae4f42e29af1
Reviewed-on: https://gerrit.libreoffice.org/23969
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Lionel Elie Mamane <lionel@mamane.lu>